--- a/D-1 연습/index.html
+++ b/D-1 연습/index.html
@@ -3,9 +3,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>조이컨트리클럽</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/script.js"></script>
 </head>
 <body>
-    
+   <div class="wrap">
+        <div class="top">
+            <header>
+                <h1><a href="#"><img src="img/logo.png" alt="조이컨트리클럽"></a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">CLUB</a>
+                            <ul class="sub">
+                                <li><a href="#">클럽소개</a></li>
+                                <li><a href="#">시설안내</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">BOOKING</a>
+                            <ul class="sub">
+                                <li><a href="#">요금안내</a></li>
+                                <li><a href="#">예약안내</a></li>
+                                <li><a href="#">위약안내</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">INFORMATION</a>
+                            <ul class="sub">
+                                <li><a href="#">명예의 전당</a></li>
+                                <li><a href="#">이벤트</a></li>
+                                <li><a href="#">자료실</a></li>
+                                <li><a href="#">포토갤러리</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">COMMUNITY</a>
+                            <ul class="sub">
+                                <li><a href="#">공지사항</a></li>
+                                <li><a href="#">Q&amp;A</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+                <p class="spot">
+                    <a href="#">로그인</a>
+                    <a href="#">회원가입</a>
+                </p>
+            </header>
+            <div class="contents">
+                <div class="slide">
+                    <ul>
+                        <li class="s1">
+                            <a href="#">
+                                <div class="text">
+                                    <h2>1자연과 사람이 공존하는<span>명품 컨트리 클럽</span></h2>
+                                    <p>단순히 골프를 즐기는 곳이 아닌 골프를 통해 마음의 여유와 안식을 찾는 휴식공간입니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="s2">
+                            <a href="#">
+                                <div class="text">
+                                    <h2><span>골프연습장(42타석, 200M)</span>및 헬스시설등 부대시설</h2>
+                                    <p>최고의 프로 강사진에 의한 다양한 프로그램으로 회원님들의 취약점을 교정하고, 실전 경험을 한층 업그레이드 해 드립니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="s3">
+                            <a href="#">
+                                <div class="text">
+                                    <h2><span>고객의 더 큰 만족</span>과 <span>품격</span>에 맞는 진정한 서비스</h2>
+                                    <p>최고의 접근성, 자연 그대로의 아름다운 경관과 대자연이 주는 품격있는 코스를 선사해 드릴것을 약속합니다.</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="banner">
+                    <a href="#">
+                        <div class="photo">
+                            <img src="img/ban.jpg" alt="연단체 추가모집">
+                        </div>
+                        <div class="text">
+                            <h2>소소한 멤버들과 함께 2032년 연단체 추가 모집 안내!</h2>
+                            <ul>
+                                <li>모집기간 : 2032년 2월 23일(목)부터 마감시까지</li>
+                                <li>운영시간 : 주중(월 ~ 금요일) 1부(7~8시대) / 2부(12시대)<strong>(*요일 및 시간대는 예약실 협의 후 결정)</strong></li>
+                            </ul>
+                        </div>
+                        <div class="arrow">
+                            <img src="img/arrow.jpg" alt="바로가기">
+                        </div>
+                    </a>
+                </div>
+                <div class="con">
+                    <ul class="tabmenu">
+                        <li class="on"><h2><a href="#">공지사항</a></h2>
+                            <div class="notice tabcon">
+                                <table>
+                                    <tr>
+                                        <th><a href="#" class="pp">페어웨이 안착율 높이는 KLPGA 안근영 프로의 드라이버 스윙 꿀팁!</a></th>
+                                        <td>2032-07-12</td>
+                                    </tr>
+                                    <tr>
+                                        <th><a href="#">골프 초보 레슨 기간 2개월 차 후기(Feat.순서 단계 & 골프채 종류)</a></th>
+                                        <td>2032-04-29</td>
+                                    </tr>
+                                    <tr>
+                                        <th><a href="#">핑 골프 G430HL 남자 여자 드라이버 골프채 추천 후기</a></th>
+                                        <td>2032-03-12</td>
+                                    </tr>
+                                    <tr>
+                                        <th><a href="#">"라운딩 시즌 돌아온다"...이마트, 봄맞이 골프 행사</a></th>
+                                        <td>2032-01-29</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </li>
+                        <li class="on"><h2><a href="#">갤러리</a></h2>
+                            <div class="gall tabcon">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <p><img src="img/g1.jpg" alt="갤러리1"></p>
+                                            <span>따뜻한 봄 라운딩</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <p><img src="img/g2.jpg" alt="갤러리2"></p>
+                                            <span>일본골프투어</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <p><img src="img/g3.jpg" alt="갤러리3"></p>
+                                            <span>명품 회원제 컨트리클럽</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="go">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <p>전화문의</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p>예약하기</p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p>오시는길</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <p class="flogo"><a href="#"><img src="img/flogo.png" alt="조이컨트리클럽"></a></p>
+            <ul class="fsns">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">NaverBlog</a></li>
+                <li><a href="#">Youtube</a></li>
+            </ul>
+            <p class="fcopy">
+
+            </p>
+        </footer>
+        <div class="popcon">
+            <h2></h2>
+            <p></p>
+            <p class="close"><button>X 닫기</button></p>
+        </div>
+   </div>
 </body>
 </html>
